SubBt/force-app/main/default/objects/Item_Receipt__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <label>Amount</label>
    <summarizedField>Item_Receipt_Line__c.Total_Amount__c</summarizedField>
    <summaryForeignKey>Item_Receipt_Line__c.Item_Receipt__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>