SubBt/force-app/main/default/objects/Item_Receipt__c/fields/Date_Received__c.field-meta.xml
<CustomField>
    <fullName>Date_Received__c</fullName>
    <inlineHelpText>Date Inventory was received and stocked.</inlineHelpText>
    <label>Date Received</label>
    <type>Date</type>
</CustomField>