SubBt/force-app/main/default/objects/Item_Receipt__c/fields/Memo__c.field-meta.xml
<CustomField>
    <fullName>Memo__c</fullName>
    <label>Memo</label>
    <length>255</length>
    <type>Text</type>
</CustomField>