SubBt/force-app/main/default/objects/Item_Receipt__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Item Receipts</relationshipLabel>
    <relationshipName>Item_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>