SubBt/force-app/main/default/objects/Item_Receipt__c/fields/Ref_No__c.field-meta.xml
<CustomField>
    <fullName>Ref_No__c</fullName>
    <label>Ref No.</label>
    <length>25</length>
    <type>Text</type>
</CustomField>