SubBt/force-app/main/default/objects/Item_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Vendor__c</columns>
    <columns>Ref_No__c</columns>
    <columns>Project__c</columns>
    <columns>Memo__c</columns>
    <columns>Date_Received__c</columns>
    <columns>Amount__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>